force-app/main/default/objects/Ecoa_Task_Configuration__c/Ecoa_Task_Configuration__c.object-meta.xml
<CustomObject>
    <label>Ecoa Task Configuration</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Ecoa Task Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ecoa Task Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>