force-app/main/default/objects/Ecoa_Task_Configuration__c/fields/Diary_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Diary_End_Date__c</fullName>
    <label>Diary End Date</label>
    <type>DateTime</type>
</CustomField>