force-app/main/default/objects/Ecoa_Task_Configuration__c/fields/Diary_GUID__c.field-meta.xml
<CustomField>
    <fullName>Diary_GUID__c</fullName>
    <label>Diary GUID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>