force-app/main/default/objects/Ecoa_Task_Configuration__c/fields/Diary_Name__c.field-meta.xml
<CustomField>
    <fullName>Diary_Name__c</fullName>
    <label>Diary Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>