force-app/main/default/objects/Ecoa_Task_Configuration__c/fields/Diary_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Diary_Start_Date__c</fullName>
    <label>Diary Start Date</label>
    <type>DateTime</type>
</CustomField>