force-app/main/default/objects/Ecoa_Task_Configuration__c/fields/Diary_Status__c.field-meta.xml
<CustomField>
    <fullName>Diary_Status__c</fullName>
    <label>Diary Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>required</fullName>
            </value>
            <value>
                <fullName>completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>