force-app/main/default/objects/Ecoa_Task_Configuration__c/fields/Ecoa_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Ecoa_Identifier__c</fullName>
    <description>Subject GUID+ Rule key + Diary GUID</description>
    <externalId>true</externalId>
    <label>Ecoa Identifier</label>
    <length>250</length>
    <type>Text</type>
</CustomField>