force-app/main/default/objects/Ecoa_Task_Configuration__c/fields/Participant_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Participant_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant Enrollment</label>
    <referenceTo>Participant_Enrollment__c</referenceTo>
    <relationshipLabel>Ecoa Task Configurations</relationshipLabel>
    <relationshipName>Ecoa_Task_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>