force-app/main/default/objects/Ecoa_Task_Configuration__c/fields/ParticipantId__c.field-meta.xml
<CustomField>
    <fullName>ParticipantId__c</fullName>
    <formula>Participant_Enrollment__r.Participant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ParticipantId</label>
    <type>Text</type>
</CustomField>