force-app/main/default/objects/Ecoa_Task_Configuration__c/fields/Reminder_config__c.field-meta.xml
<CustomField>
    <fullName>Reminder_config__c</fullName>
    <label>Reminder config</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>