force-app/main/default/objects/Ecoa_Task_Configuration__c/fields/Rule_frequency__c.field-meta.xml
<CustomField>
    <fullName>Rule_frequency__c</fullName>
    <label>Rule frequency</label>
    <length>250</length>
    <type>Text</type>
</CustomField>