force-app/main/default/objects/Ecoa_Task_Configuration__c/fields/Rule_Key__c.field-meta.xml
<CustomField>
    <fullName>Rule_Key__c</fullName>
    <label>Rule Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>