force-app/main/default/objects/Ecoa_Task_Configuration__c/fields/Rule_Recurrence__c.field-meta.xml
<CustomField>
    <fullName>Rule_Recurrence__c</fullName>
    <label>Rule Recurrence</label>
    <length>250</length>
    <type>Text</type>
</CustomField>