force-app/main/default/objects/Ecoa_Task_Configuration__c/fields/Subject_GUID__c.field-meta.xml
<CustomField>
    <fullName>Subject_GUID__c</fullName>
    <label>Subject GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>