force-app/main/default/objects/Ecoa_Task_Configuration__c/fields/Window_Begin__c.field-meta.xml
<CustomField>
    <fullName>Window_Begin__c</fullName>
    <label>Window Begin</label>
    <type>DateTime</type>
</CustomField>