force-app/main/default/objects/Ecoa_Task_Configuration__c/fields/Window_End__c.field-meta.xml
<CustomField>
    <fullName>Window_End__c</fullName>
    <label>Window End</label>
    <type>DateTime</type>
</CustomField>